--- a/index.html
+++ b/index.html
@@ -1,14 +1,5 @@
 <!DOCTYPE html>
 
-<center><div class="img">
-  <a target="_blank" href="img_forest.jpg">
-    <img src="http://science.utcc.ac.th/science/images/stories/content_images/bannerSchoolOfScienceTemp.png?oh=611653c19598790fdc7c8663ad3f8540&oe=566E4786&__gda__=1449846947_bda3086031a2e9c52857d6edd7102fa5" alt="Forest" width="1000" height="300">
-  </a>
-  <div class="desc"></div>
-</div>
-</center>
-
-
 <html>
     <head>
         <style>
@@ -87,8 +78,8 @@ body {
 
     <h1>Hello My Web NotVans</h1>
 
-<p></p> <br>
-<p></p> <br>
+<p>=ชื่อ</p> <br>
+<p>เลขรหัส</p> <br>
 <p> Information Technology Communication</p>
 
 </body>
