--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ body {
 
     <h1>Hello My Web NotVans</h1>
 
-<p>=ชื่อ</p> <br>
-<p>เลขรหัส</p> <br>
+<p>Patiphan Siriyaman</p></p> <br>
+<p>5705404016</p> <br>
 <p> Information Technology Communication</p>
 
 </body>
