--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {
 <br>
 <>
 
-    <h1>Hello My Web NotVans</h1>
+    <h1>Hello My Web EL ALVI</h1>
 
 <p>Patiphan Siriyaman</p></p> <br>
 <p>5705404016</p> <br>
